tools/flow9/tests/cpp/array_index.flow
native println : io (?) -> void = Native.println;

Maybe ::= None, Some;

None();
Some();

main() {
	// error: ‘__index’ was not declared in this scope
	// TODO: __index -> arr[ind] or arr.at(ind) (vector.at)
	arr : [Maybe] = [Some(), None()];
	value = arr[1];
	println(switch (value) {
		Some(): "some";
		None(): "none";
	}); // none
}
